@startuml Banco

entity usuario {
    *id BIGINT NOT NULL <<PK>>
    id_estado BIGINT NOT NULL <<FK>>
    id_perfil BIGINT NOT NULL <<FK>>
    --
    nome_usuario VARCHAR(255) NOT NULL
    login_usuario VARCHAR(200) NOT NULL
    senha_usuario VARCHAR(200) NOT NULL
    email_usuario VARCHAR(200) NOT NULL
    endereco TEXT NOT NULL
    municipio VARCHAR(200) NOT NULL
}

entity estado {
    *id BIGINT NOT NULL <<PK>>
    --
    estado VARCHAR(100) NOT NULL
}

entity perfil {
    *id BIGINT NOT NULL <<PK>>
    --
    nome_perfil VARCHAR(255) NOT NULL
}

entity custos_variaveis {
    *id BIGINT NOT NULL
    --
    total_parcial NUMERIC(10,2) NOT NULL
    valor_embalagem NUMERIC(10,2) NOT NULL
    pecas_embalagem BIGINT NOT NULL
    valor_cartoes NUMERIC(10,2) NOT NULL
    pecas_cartoes BIGINT NOT NULL
    valor_etiquetas NUMERIC(10,2) NOT NULL
    pecas_etiquetas BIGINT NOT NULL
    valor_frete NUMERIC(10,2) NOT NULL
    pecas_frete BIGINT NOT NULL
    valor_outros NUMERIC(10,2) DEFAULT 0
    pecas_outros BIGINT DEFAULT 1
    valor_total NUMERIC(10,2) NOT NULL
}

entity horas_trabalhadas {
    *id BIGINT NOT NULL
    --
    numero_horas BIGINT NOT NULL DEFAULT 1
    salario_desejado NUMERIC(10,2) NOT NULL DEFAULT 0
    valor_hora NUMERIC(10,2) NOT NULL 
}

entity custos_fixos {
    *id BIGINT NOT NULL <<PK>>
    --
    aluguel NUMERIC(10,2) NOT NULL
    agua NUMERIC(10,2) NOT NULL
    luz NUMERIC(10,2) NOT NULL
    telefone NUMERIC(10,2) NOT NULL
    internet NUMERIC(10,2) NOT NULL
    iptu NUMERIC(10,2) NOT NULL
    valor_outros NUMERIC(10,2) NOT NULL
    valor_parcial NUMERIC(10,2) NOT NULL
    pecas_produzida_mes BIGINT DEFAULT 1
    valor_total NUMERIC(10,2) NOT NULL
}

entity outros_fixos {
    *id BIGINT NOT NULL <<PK>>
    id_custos_fixos BIGINT NOT NULL <<FK>>
    --
    custo_fixo VARCHAR(100) NOT NULL
    valor NUMERIC(10,2) NOT NULL
}

entity material {
    *id BIGINT NOT NULL <<PK>>
    id_custos_variaveis BIGINT NOT NULL <<FK>>
    --
    material VARCHAR(100) NOT NULL
    valor NUMERIC(10,2) NOT NULL
    pecas INT NOT NULL
}

entity venda {
    *id BIGINT NOT NULL <<PK>>
    id_custos_variaveis BIGINT NOT NULL <<FK>>
    id_horas_trabalhadas BIGINT NOT NULL <<FK>>
    id_custos_fixos BIGINT NOT NULL <<FK>>
    id_usuario BIGINT NOT NULL <<FK>>
    --
    total_parcial NUMERIC(10,2) NOT NULL
    margem_lucro BIGINT DEFAULT 0
    despesas_comercializacao BIGINT DEFAULT 0
    total_venda NUMERIC(10,2) NOT NULL
}

usuario }|--|| estado
usuario }|--|| perfil
venda ||--|| custos_variaveis
venda ||--|| horas_trabalhadas
venda ||--|| custos_fixos
custos_variaveis ||--|{ material
custos_fixos ||--o{ outros_fixos
usuario ||--o{ venda

@enduml
